Fixed broken style on iOS for input elements
The input["submit"] and input["button"] elements cannot be styled in iOS until you add the "-webkit-appearance: none" style.

--- a/src/scss/components/form.scss
+++ b/src/scss/components/form.scss
@@ -224,6 +224,8 @@ $internal-form-checkbox-indeterminate-image: "data:image/svg+xml;charset=UTF-8,%
  * Remove default style in iOS.
  */
 
+input[type="submit"],
+input[type="button"],
 .uk-input,
 .uk-textarea { -webkit-appearance: none; }
 
